Añadido de capa de dominio y presentation para LogIn

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <include layout="@layout/view_form" />
+    <include layout="@layout/fragment_user" />
 
 
 </FrameLayout>
